@@ -1586,6 +1586,19 @@ static int pbsd_init_job(
 
       pbsd_init_reque(pjob, KEEP_STATE);
 
+      /* decrease array running job count */
+      if ((pjob->ji_arraystruct != NULL) &&
+          (pjob->ji_isparent == FALSE))
+        {
+        job_array *pa = pjob->ji_arraystruct;
+        
+        if (pa->ai_qs.jobs_running > 0)
+          {
+          pa->ai_qs.jobs_running--;
+          array_save(pa);
+          }
+        }
+
       break;
 
     case JOB_SUBSTATE_RERUN:
