@@ -6,6 +6,8 @@ Array Changes
       implement future features we will add.
   b - remove the pointer to a job from the job array after it has died.
   f - Allow users to delete a range of jobs from the job array
+  f - Added a slot limit to the job arrays - this restricts the number of jobs
+      that can concurrently run from one job array.
 
 2.5.0
   f - added full support (server-scheduler-mom) for Cygwin (UIIP NAS of Belarus,
